add keywords_count
